--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.2
   home_widget: ^0.6.0
+  modal_bottom_sheet: ^3.0.0
 
 dev_dependencies:
   flutter_test:
