--- a/ios/SimpListWidget/SimpListWidget.entitlements
+++ b/ios/SimpListWidget/SimpListWidget.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.simplist.app</string>
+		<string>group.simplist.todo.app</string>
 	</array>
 </dict>
 </plist>
