fully dfone, only flickering in widget

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>simplist</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.simplist.app</string>
+		</dict>
+	</array>
 </dict>
 </plist>
